syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "messages.proto";
import "graphstate.proto";

message SyncDAG {
  repeated Hash mainLocator =1 [(gogoproto.moretags) = "ssz-max:\"32\""];
  GraphState graphState = 2;
}

message SubDAG {
  Hash syncPoint =1;
  GraphState graphState = 2;
  repeated Hash blocks =3 [(gogoproto.moretags) = "ssz-max:\"2000\""];
}

